--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: ""
 url: "https://liangfei.me"
 
 # Analytics
-google_analytics: G-D50GE5EYBB
+google_analytics: G-WGQHJGVC9B
 
 # Social
 twitter_username: liangfeidotme
