--- a/_config.yml
+++ b/_config.yml
@@ -9,36 +9,11 @@ url: "https://liangfei.me"
 google_analytics: G-WGQHJGVC9B
 
 # Build settings
-remote_theme: jekyll/minima
+remote_theme: jekyll/minima@master
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
   - jemoji
-
-# Social
-minima:
-  social_links:
-    - { platform: github,  user_url: "https://github.com/liangfeidotme" }
-    - { platform: twitter,  user_url: "https://twitter.com/liangfeidotme" }
-    - { platform: facebook,  user_url: "https://www.facebook.com/liangfei.me" }
-    - { platform: instagram,  user_url: "https://www.instagram.com/liangfei.me" }
-    - { platform: linkedin,  user_url: "https://www.linkedin.com/in/lyndon-liang-895707229/" }
-
-header_pages: []
-
-# Comments
-disqus:
-  shortname: liangfei-me
-
-collections: 
-  reading:
-    output: true
-  mindset:
-    output: true
-  marketing:
-    output: true
-  design:
-    output: true
 
 include:
   - _pages
