--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: liangfei.me 
 author:
-  name: Lyndon Liang
+  name: liangfei 
   email: njliangfei@gmail.com
 description: >-
-  A History-loving, Code-writing Entreprenuer Fluent in Chinse, Japanse and English
+  A History-loving, Code-writing Entreprenuer. Fluent in Chinse, Japanse and English
 baseurl: ""
 url: "https://liangfei.me"
 
